[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linkbay-multitenant"
version = "0.1.0"
description = "Sistema leggero di multi-tenancy per FastAPI"
readme = "README.md"
authors = [{name = "LinkBayCMS Team"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "starlette>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "uvicorn>=0.24.0",
]
